--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "mongodb": "^6.11.0",
     "next": "14.2.5",
-    "next-auth": "^5.0.0-beta.25",
+    "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
