--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "mongodb": "^6.11.0",
+    "mongoose": "^8.8.3",
     "next": "14.2.5",
     "next-auth": "^4.24.10",
     "react": "^18",
