--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "clone-deep": "^4.0.1",
+    "cloudinary": "^2.5.1",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
     "next": "14.2.5",
@@ -20,7 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
