--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-sortablejs": "^6.1.4",
+    "sortablejs": "^1.15.6",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
