--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "clone-deep": "^4.0.1",
     "cloudinary": "^2.5.1",
+    "date-fns": "^4.1.0",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
     "next": "14.2.5",
