--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-sortablejs": "^6.1.4",
+    "recharts": "^2.14.1",
     "sortablejs": "^1.15.6",
     "uniqid": "^5.4.0"
   },
